--- a/#src/scss/bem-blocks/page-nav.scss
+++ b/#src/scss/bem-blocks/page-nav.scss
@@ -1,3 +1,4 @@
+/* Page-nav */
 .page-nav {
   // .page-nav__list
   &__list {
@@ -27,6 +28,7 @@
       }
     }
   }
+
   // .page-nav__link
   &__link {
     font-family: inherit;
