--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,3 +1,4 @@
+/* Header */
 .header {
   height: 80px;
   background-color: $bg-black;
@@ -11,6 +12,7 @@
     top: 0;
     width: 100%;
   }
+
   // .header__inner
   &__inner {
     display: flex;
@@ -20,6 +22,7 @@
     position: relative;
     height: 100%;
   }
+
   // .header__top
   &__top {
     display: grid;
@@ -28,7 +31,6 @@
     column-gap: 20px;
     padding-top: 14px;
     padding-bottom: 11px;
-    /* Префиксер ругается, что ие11 не понимает алигн-итемс в гридах */
     & > * {
       align-self: center;
     }
@@ -150,6 +152,7 @@
       }
     }
   }
+
   // .header__search-trigger
   &__search-trigger {
     grid-area: search-trigger;
@@ -213,15 +216,6 @@
       visibility: visible;
     }
   }
-  // .dropdown-button-text
-  .dropdown-button-text {
-    &--open {
-    }
-    &--close {
-      display: none;
-      visibility: hidden;
-    }
-  }
 
   /* Mobile dropdown-menu */
   // .header__dropdown-menu
@@ -270,10 +264,19 @@
   }
 }
 
-//*.dropdown-menu
+/* Dropdown-button-text */
+.dropdown-button-text {
+  &--close {
+    display: none;
+    visibility: hidden;
+  }
+}
+
+/* Dropdown-menu */
 .dropdown-menu {
   background-color: $bg-black;
   overflow-y: auto;
+
   // .dropdown-menu__inner
   &__inner {
     padding-left: $pl;
@@ -281,10 +284,12 @@
     padding-top: 25px;
     padding-bottom: 25px;
   }
+
   // .dropdown-menu__nav
   &__nav {
     margin-bottom: 25px;
   }
+
   // .dropdown-menu__search
   &__search {
     display: block;
@@ -294,6 +299,7 @@
       visibility: hidden;
     }
   }
+
   // .dropdown-menu__contacts
   &__contacts {
     padding-top: 40px;
@@ -301,12 +307,8 @@
   }
 }
 
-//*.header-nav
+/* Header-nav */
 .header-nav {
-  // .header-nav__list
-  &__list {
-    // margin-bottom: 25px;
-  }
   // .header-nav__item
   &__item {
     font-size: 20px;
@@ -337,22 +339,23 @@
       }
     }
   }
+
   // .header-nav__link
   &__link {
     color: $white;
   }
+
   // .header-nav__sub-list
   &__sub-list {
     position: relative;
     margin-left: 20px;
-    // margin-bottom: 40px;
     padding-left: 30px;
-    // margin-top: 30px;
     height: 0;
     overflow: hidden;
     transition: height 0.3s linear;
     border-left: 1px solid $orange-dark;
   }
+
   // .header-nav__sub-item
   &__sub-item {
     font-size: 17px;
@@ -362,13 +365,14 @@
       margin-bottom: 0;
     }
   }
+
   // .header-nav__sub-link
   &__sub-link {
     color: $white;
   }
 }
 
-//*catalog-dropdown
+/* Catalog-dropdown */
 .catalog-dropdown {
   display: none;
   transform-origin: top;
@@ -379,15 +383,16 @@
     display: block;
     opacity: 0;
   }
-  //todo мб перенести к элементу
   &.open {
     transform: rotate(0deg);
     @media (min-width: $md2) {
       opacity: 1;
     }
   }
+
   // .catalog-dropdown__content
   &__content {
+    padding: 30px 50px;
     &::before {
       content: '';
       position: absolute;
@@ -400,9 +405,8 @@
       border-bottom: 16px solid $white;
       transform: translateY(-100%);
     }
-    // overflow-y: auto;
-    padding: 30px 50px;
   }
+
   // .catalog-dropdown__tabs
   &__tabs {
     position: relative;
@@ -420,6 +424,7 @@
       background-color: $grey-light;
     }
   }
+
   // .catalog-dropdown__button-group
   &__button {
     position: relative;
@@ -462,7 +467,6 @@
   // .catalog-dropdown__item
   &__item {
     display: none;
-    // grid-template-columns: repeat(auto-fit, minmax(170px, max-content));
     grid-template-columns: repeat(4, 1fr);
     gap: 40px 40px;
     min-width: 620px;
@@ -473,9 +477,7 @@
       display: grid;
     }
   }
-  // .catalog-dropdown__list
-  &__list {
-  }
+
   // .catalog-dropdown__list-item
   &__list-item {
     padding-top: 5px;
@@ -483,6 +485,7 @@
     font-size: 17px;
     line-height: 1.5;
   }
+
   // .catalog-dropdown__link
   &__link {
     color: $black;
@@ -496,7 +499,7 @@
   }
 }
 
-// *.burger-icon
+/* Burger-icon */
 .burger-icon {
   display: flex;
   justify-content: center;
@@ -529,19 +532,4 @@
       top: -6px;
     }
   }
-  // &.open {
-  //   span {
-  //     background-color: transparent;
-  //     &::before,
-  //     &::after {
-  //       top: 0;
-  //     }
-  //     &::after {
-  //       transform: rotate3d(0, 0, 1, -45deg);
-  //     }
-  //     &::before {
-  //       transform: rotate3d(0, 0, 1, 45deg);
-  //     }
-  //   }
-  // }
 }
