--- a/#src/scss/404.scss
+++ b/#src/scss/404.scss
@@ -1,3 +1,4 @@
+/* Not-found */
 .not-found {
   // .not-found__inner
   &__inner {
@@ -31,6 +32,7 @@
       }
     }
   }
+
   // .not-found__content
   &__content {
     padding-top: 60px;
@@ -46,6 +48,7 @@
       padding-top: 160px;
     }
   }
+
   // .not-found__text-wrapper
   &__text-wrapper {
     margin-bottom: 30px;
@@ -54,6 +57,7 @@
       margin-bottom: 50px;
     }
   }
+
   // .not-found__heading
   &__heading {
     font-family: $forum;
@@ -67,6 +71,7 @@
       font-size: 75px;
     }
   }
+
   // .not-found__desc
   &__desc {
     font-size: 20px;
@@ -75,6 +80,7 @@
       font-size: 25px;
     }
   }
+
   // .not-found__button-wrapper
   &__button-wrapper {
     display: grid;
@@ -91,6 +97,7 @@
       align-items: center;
     }
   }
+
   // .not-found__button
   &__button {
     white-space: nowrap;
