--- a/#src/scss/bem-blocks/counter.scss
+++ b/#src/scss/bem-blocks/counter.scss
@@ -1,6 +1,8 @@
+/* Counter */
 .counter {
   display: inline-flex;
   align-items: center;
+
   // .counter__button
   &__button {
     display: flex;
@@ -9,7 +11,6 @@
     width: 48px;
     height: 48px;
     border: 1px solid $orange;
-    //!не забудь сделать
     &:active {
       border: 1px solid lighten($color: $orange, $amount: 10%);
     }
@@ -34,6 +35,7 @@
       }
     }
   }
+
   // .counter__content
   &__content {
     display: inline-flex;
@@ -45,6 +47,7 @@
       border: 1px solid $orange;
     }
   }
+
   // .counter__input
   &__input {
     display: inline-block;
