--- a/#src/scss/bem-blocks/filter-trigger.scss
+++ b/#src/scss/bem-blocks/filter-trigger.scss
@@ -1,3 +1,4 @@
+/* Filter-trigger */
 .filter-trigger {
   display: inline-grid;
   grid-template-columns: 20px min-content;
@@ -6,6 +7,7 @@
   & > * {
     align-self: center;
   }
+
   // .filter-tirgger__icon
   &__icon {
     display: inline-block;
@@ -15,6 +17,7 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
+
   // .filter-tirgger__text
   &__text {
     font-size: 17px;
