--- a/#src/scss/bem-blocks/form.scss
+++ b/#src/scss/bem-blocks/form.scss
@@ -1,3 +1,4 @@
+/* Form */
 .form {
   // .form__label
   &__label {
@@ -5,6 +6,7 @@
     font-size: 17px;
     line-height: 1.4;
   }
+
   // .form__group-fields
   &__group-fields {
     &--num-hide-arrows {
@@ -27,6 +29,8 @@
     }
   }
 }
+
+/* Field */
 .field {
   padding: 8px 14px;
   font-family: $montserrat;
@@ -44,6 +48,8 @@
     width: 100%;
   }
 }
+
+/* Checkbox */
 .checkbox {
   position: relative;
   cursor: pointer;
@@ -131,6 +137,7 @@
       box-shadow: 0 0 5px 1px $grey-dark;
     }
   }
+
   // .checkbox__input
   &__input {
     position: absolute;
@@ -160,6 +167,7 @@
       background-color: #9b9b9b;
     }
   }
+
   // .checkbox__box
   &__box {
     display: inline-block;
@@ -169,6 +177,8 @@
     box-shadow: 0 0 0 1px $orange;
   }
 }
+
+/* Radio */
 .radio {
   position: relative;
   display: flex;
@@ -234,6 +244,7 @@
       }
     }
   }
+
   // .radio__box
   &__box {
     position: relative;
@@ -282,11 +293,15 @@
     }
   }
 }
+
+/* Switch */
 .switch {
   position: relative;
   display: inline-block;
   width: 36px;
   height: 21px;
+
+  // .switch__input
   &__input {
     position: absolute;
     width: 1px;
@@ -306,6 +321,8 @@
       box-shadow: 0 0 1px $orange;
     }
   }
+
+  // .switch__slider
   &__slider {
     position: absolute;
     cursor: pointer;
