--- a/#src/scss/bem-blocks/product-card.scss
+++ b/#src/scss/bem-blocks/product-card.scss
@@ -1,3 +1,4 @@
+/* Product-card */
 .product-card {
   position: relative;
   background-color: $bg-card;
@@ -24,7 +25,8 @@
       }
     }
   }
-  // .product-card__wrapepr
+
+  // .product-card__wrapper
   &__wrapper {
     display: grid;
     height: 100%;
@@ -34,6 +36,7 @@
       height: auto;
     }
   }
+
   // .product-card__link
   &__link {
     @supports (display: contents) {
@@ -54,11 +57,13 @@
       outline: 0;
     }
   }
+
   // .product-card__top
   &__top {
     position: relative;
     z-index: 0;
   }
+
   // .product-card__bottom
   &__bottom {
     display: grid;
@@ -73,6 +78,7 @@
       left: 0;
     }
   }
+
   // .product-card__bottom-inner
   &__bottom-inner {
     display: block;
@@ -88,6 +94,7 @@
       transform: translateY(100%);
     }
   }
+
   // .product-card__product-info
   &__product-info {
     //!не ставить, чтобы ссылка растянулась на весь блок position: relative;
@@ -95,6 +102,7 @@
     padding-right: 15px;
     padding-bottom: 10px;
   }
+
   // .product-card__image
   &__image {
     position: relative;
@@ -118,6 +126,7 @@
       margin-bottom: 10px;
     }
   }
+
   // .product-card__product-name
   &__product-name {
     font-size: 17px;
@@ -133,6 +142,7 @@
       font-size: 17px;
     }
   }
+
   // .product-card__price
   &__price {
     margin-right: 10px;
@@ -144,6 +154,7 @@
       font-size: 18px;
     }
   }
+
   // .product-card__old-price
   &__old-price {
     font-size: 17px;
@@ -154,6 +165,7 @@
       font-size: 16px;
     }
   }
+
   // .product-card__button
   &__button {
     width: 100%;
@@ -175,6 +187,7 @@
       display: none;
     }
   }
+
   // .product-card__tips
   &__tips {
     z-index: 1;
@@ -185,12 +198,14 @@
     left: 0;
     padding: 15px 10px;
   }
+
   // .product-card__tips-row
   &__tips-row {
     &:nth-child(n + 5) {
       display: none;
     }
   }
+
   // .product-card__favorites
   &__favorites {
     position: absolute;
@@ -224,6 +239,8 @@
     }
   }
 }
+
+/* Tip */
 .tip {
   display: inline-flex;
   justify-content: center;
