--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,3 +1,4 @@
+/* Footer */
 .footer {
   background-color: $bg-black;
   // .footer__content
@@ -10,6 +11,7 @@
       padding-bottom: 60px;
     }
   }
+
   // .footer__content-inner
   &__content-inner {
     @include padding-container($maxWidthContainer, $pl, $pr);
@@ -22,6 +24,7 @@
         'contacts nav';
     }
   }
+
   // .footer__logo
   &__logo {
     display: flex;
@@ -44,6 +47,7 @@
       }
     }
   }
+
   // .footer__nav
   &__nav {
     margin-bottom: 40px;
@@ -55,6 +59,7 @@
       margin-bottom: 0;
     }
   }
+
   // .footer__contacts
   &__contacts {
     @media (min-width: $md2) {
@@ -71,12 +76,14 @@
       height: 30px;
     }
   }
+
   // .footer__bottom
   &__bottom {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #151515;
   }
+
   // .footer__bottom-inner
   &__bottom-inner {
     @include padding-container($maxWidthContainer, $pl, $pr);
@@ -87,6 +94,7 @@
       justify-content: space-between;
     }
   }
+
   // .footer__bottom-links
   &__bottom-links {
     display: grid;
@@ -110,6 +118,7 @@
       }
     }
   }
+
   // .footer__copyright
   &__copyright {
     color: darken($color: $white, $amount: 40%);
@@ -119,6 +128,7 @@
   }
 }
 
+/* Footer-nav */
 .footer-nav {
   // .footer-nav__list
   &__list {
@@ -135,7 +145,9 @@
   }
   // .footer-nav__item
   &__item {
+    list-style: none;
   }
+
   // .footer-nav__heading
   &__heading {
     font-family: $montserrat;
@@ -145,6 +157,7 @@
     color: $white;
     margin-bottom: 10px;
   }
+
   // .footer-nav__link
   &__link {
     color: inherit;
@@ -154,6 +167,7 @@
       text-decoration: underline;
     }
   }
+
   // .footer-nav__sublist
   &__sublist {
     font-family: $montserrat;
@@ -162,6 +176,7 @@
     font-size: 14px;
     color: $text-white;
   }
+
   // .footer-nav__sublist-item
   &__sublist-item {
     margin-bottom: 7px;
