--- a/#src/scss/typography.scss
+++ b/#src/scss/typography.scss
@@ -1,4 +1,4 @@
-//fonts
+/* Fonts */
 $forum: 'Forum', cursive;
 $jost: 'Jost', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
@@ -12,12 +12,10 @@ $montserrat: 'Montserrat', sans-serif;
     font-size: 36px;
   }
   @media (min-width: $md4) {
-    // font-size: 50px;
     font-size: 42px;
     margin-bottom: 30px;
   }
   @media (min-width: $md2) {
-    // font-size: 60px;
     font-size: 48px;
     margin-bottom: 40px;
   }
