--- a/#src/scss/bem-blocks/form.scss
+++ b/#src/scss/bem-blocks/form.scss
@@ -10,15 +10,12 @@
   // .form__group-fields
   &__group-fields {
     &--num-hide-arrows {
-      /* Chrome */
       input::-webkit-outer-spin-button,
       input::-webkit-inner-spin-button {
-        /* display: none; <- Crashes Chrome on hover */
         appearance: none;
         -webkit-appearance: none;
-        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+        margin: 0;
       }
-      /* Firefox */
       input[type='number'] {
         -moz-appearance: textfield;
       }
@@ -254,7 +251,6 @@
     background-color: $white;
     border: 2px solid $orange;
     border-radius: 50%;
-    color-adjust: exact;
     transition: box-shadow 0.1s linear;
     &:hover {
       box-shadow: 0 0 2px 0 $orange;
