--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -155,7 +155,7 @@
       }
     }
     img {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       object-fit: cover;
       border: 1px solid transparent;
