--- a/src/scss/bem-blocks/filter.scss
+++ b/src/scss/bem-blocks/filter.scss
@@ -106,6 +106,20 @@
     }
   }
 
+  // .group-filter__button
+  &__button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    &:focus-visible {
+      border: 1px solid $orange;
+      outline: none;
+    }
+  }
+
   // .group-filter__bottom
   &__bottom {
     overflow: hidden;
