--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,11 +6,8 @@
 // @import url(https://fonts.googleapis.com/css?family=Inter:300,regular,500,700&display=swap&subset=cyrillic-ext);
 @import 'fonts';
 
-/* Icon font */
-//@import "icons";
-
 /* Font default */
-$fontFamily: 'Jost', 'Arial', sans-serif;
+$fontFamily: 'Jost', sans-serif;
 $fontSize: 16;
 
 /* Container params */
