--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,5 +1,5 @@
 /* Fonts */
-$forum: 'Forum', cursive;
+$forum: 'Forum', serif;
 $jost: 'Jost', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
 
